# STARBench

./: .gitmodules  README.md  example.py  pyproject.toml
scripts/: download.sh  install.sh  install_starbench.sh  install_virtualhome.sh  mp4_to_gif.py
starbench/: action_ros2_utils.py  action_utils.py  eval_utils.py  tracing.py
